--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "request": "^2.74.0",
     "socket.io": "^1.4.8",
     "webpack": "^1.13.1"
+  },
+  "devDependencies": {
+    "jsx-control-statements": "^3.1.2"
   }
 }
