--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "body-parser": "^1.15.2",
+    "classnames": "^2.2.5",
     "dotenv": "^2.0.0",
     "events": "^1.1.1",
     "express": "^4.14.0",
