--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "events": "^1.1.1",
     "express": "^4.14.0",
     "flux": "^2.1.1",
+    "moment": "^2.14.1",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "react": "^15.2.1",
