--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./node_modules/.bin/babel-node --presets react,es2015 server.js"
+    "start": "node server.js",
+    "postinstall": "webpack -p --config webpack.prod.config.js"
   },
   "author": "",
   "license": "ISC",
