--- a/.babelrc
+++ b/.babelrc
@@ -2,3 +2,22 @@
   "presets": ["es2015", "react"],
   "plugins": ["jsx-control-statements"]
 }
+
+{
+  "presets": [
+    "es2015",
+    "react",
+    "stage-0"
+  ],
+  "env": {
+    "development": {
+      "plugins": [["react-transform", {
+        "transforms": [{
+          "transform": "react-transform-hmr",
+          "imports": ["react"],
+          "locals": ["module"]
+        }]
+      }], "jsx-control-statements"]
+    }
+  }
+}
