--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "postinstall": "webpack -p --config"
+    "start": "nodemon ./node_modules/.bin/babel-node --presets react,es2015 server.js",    
   },
   "author": "",
   "license": "ISC",
