--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node ./js/app.js",
+    "start": "./node_modules/.bin/babel-node --presets react,es2015 server.js",
     "build": "webpack --config ./webpack.prod.config.js --progress --colors"
   },
   "author": "",
