--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "./node_modules/.bin/babel-node --presets react,es2015 server.js",
-    "build": "webpack --config ./webpack.prod.config.js --progress --colors"
+    "build": "webpack --config ./webpack.prod.config.js --progress --colors",
+    "postinstall": "webpack"
   },
   "author": "",
   "license": "ISC",
