--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "./node_modules/.bin/babel-node --presets react,es2015 server.js",
     "build": "webpack --config ./webpack.prod.config.js --progress --colors",
-    "postinstall": "webpack"
+    "postinstall": "webpack i"
   },
   "author": "",
   "license": "ISC",
