--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "./node_modules/.bin/babel-node --presets react,es2015 server.js",
     "build": "webpack --config ./webpack.prod.config.js --progress --colors",
-    "postinstall": "webpack i"
+  },
+  "engines": {
+    "node": "6.3.1"
   },
   "author": "",
   "license": "ISC",
