--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node ./node_modules/.bin/babel-node --presets react,es2015 server.js",
-    "build": "webpack --config ./webpack.prod.config.js --progress --colors",
-  },
-  "engines": {
-    "node": "6.3.1"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
