--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "build": "webpack --config ./webpack.config.js --progress --colors",
+    "start": "node server.js",
+    "postinstall": "npm run build"
   },
   "author": "",
   "license": "ISC",
