--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
     "events": "^1.1.1",
     "express": "^4.14.0",
     "flux": "^2.1.1",
+    "jsx-control-statements": "^3.1.2",
     "moment": "^2.14.1",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.1",
+    "react-scrollbar": "^0.4.1",
     "request": "^2.74.0",
     "socket.io": "^1.4.8",
-    "webpack": "^1.13.1",
-    "jsx-control-statements": "^3.1.2"
+    "webpack": "^1.13.1"
   }
 }
